--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@
     margin: 0;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
 .pointer {
     cursor: pointer;
+}
+
+footer {
+    background-color: #d3d3d3;
+    color: #fff;
 }
