--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,6 +23,10 @@ main {
 
 .pointer {
     cursor: pointer;
+}
+
+.main-image {
+    border-radius: 15px;
 }
 
 footer {
