--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@ main {
     border-radius: 15px;
 }
 
+.card:hover {
+    transform: scale(1.03);
+    -webkit-box-shadow: 7px 8px 21px -4px rgba(0,0,0,0.45); 
+    box-shadow: 7px 8px 21px -4px rgba(0,0,0,0.45);
+    transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out, box-shadow 1s ease-in-out;
+}
+
 footer {
     background-color: #d3d3d3;
     color: #fff;
